--- a/Personal_Projects/Multi_Agent_Web_Dev/requirements.txt
+++ b/Personal_Projects/Multi_Agent_Web_Dev/requirements.txt
@@ -1,5 +1,5 @@
 python-dotenv==1.0.1
 chainlit==1.0.400
-openai-agents==0.1.9
 openai==1.30.1
 httpx==0.27.0
+git+https://github.com/openai/agents.git
